--- a/app/src/main/res/layout/activity_match_details.xml
+++ b/app/src/main/res/layout/activity_match_details.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.thejcs.stahp.MatchDetailsActivity"
+    tools:context="br.com.thejcs.stahp.ui.MatchDetailsActivity"
     tools:ignore="MergeRootFrame" />
