--- a/app/src/main/res/layout/fragment_match_details.xml
+++ b/app/src/main/res/layout/fragment_match_details.xml
@@ -7,13 +7,23 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.thejcs.stahp.MatchDetailsActivity$PlaceholderFragment">
+    tools:context="br.com.thejcs.stahp.ui.MatchDetailsActivity$PlaceholderFragment">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Large Text"
+            android:id="@+id/match_status"
+            android:layout_below="@+id/match_creator"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -25,15 +35,6 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true" />
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
-            android:id="@+id/match_status"
-            android:layout_below="@+id/match_creator"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
     </LinearLayout>
 
     <LinearLayout
@@ -50,7 +51,7 @@
             android:id="@+id/textView" />
 
         <ListView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/match_players" />
     </LinearLayout>
