--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,15 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="br.com.thejcs.stahp.MainActivity" >
+    tools:context="br.com.thejcs.stahp.ui.MainActivity" >
 
    <item android:id="@+id/action_new"
         android:icon="@drawable/ic_action_new"
         android:title="@string/action_new"
         app:showAsAction="ifRoom" />
-
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:showAsAction="never" />
 
 </menu>
